--- a/src/notebooks/ML Pipeline Preparation.ipynb
+++ b/src/notebooks/ML Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "[26216 rows x 40 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,8 +1255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(modelling_dir + 'model_output.pkl', mode='wb') as fp:\n",
-    "    cPickle.dump(fp)"
+    "with open(modelling_dir + '/model_output.pkl', mode='wb') as fp:\n",
+    "    cPickle.dump(cv, fp)"
    ]
   },
   {
